# rs-matrix-webhook

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TESTS.md  config.example.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
formatters/: discord.lua  github.lua  gitlab_gchat.lua  gitlab_teams.lua  gitlab_webhook.lua  grafana.lua  grn.lua  identity.lua
src/: auth.rs  config.rs  main.rs  markdown.rs  matrix.rs
src/formatters/: builtin.rs  lua.rs  mod.rs
