[package]
name = "rs-matrix-webhook"
version = "1.0.0-beta1"
edition = "2024"
description = "Matrix webhook server with Lua-extensible formatters"

[[bin]]
name = "matrix-webhook"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.13", features = [
    "json",
    "rustls",
    "rustls-native-certs",
], default-features = false }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"

config = { version = "0.15", features = ["toml"] }

mlua = { version = "0.11", features = ["lua54", "vendored"] }

pulldown-cmark = "0.13"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

regex = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
